--- a/index.html
+++ b/index.html
@@ -416,21 +416,18 @@
     <section class="circle" id="circle-background"></section>
     <section class="circle" id="circle-border">
       <span>H</span>
-      <span>I</span>
-      <span>R</span>
       <span>E</span>
+      <span>L</span>
+      <span>L</span>
+      <span>O</span>
       <span>&nbsp;</span>
-      <span>M</span>
-      <span>E</span>
+      <span>&nbsp;</span>
       <span>&nbsp;</span>
       <span>H</span>
-      <span>I</span>
-      <span>R</span>
       <span>E</span>
-      <span>&nbsp;</span>
-      <span>M</span>
-      <span>E</span>
-      <span>&nbsp;</span>
+      <span>L</span>
+      <span>L</span>
+      <span>O</span>
     </section>
     <section class="circle info">
       <a href="https://www.linkedin.com/in/kiding/">LinkedIn</a>
