--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
     </section>
 
     <section class="info">
-        <p>김동성 ᛫ Dongsung Kim</p>
+        <p>김동성 ᛫ Dongsung (Donny) Kim</p>
         <p><a href="mailto:kiding@me.com">Mail</a> ᛫ <a href="https://twitter.com/kid1ng">Twitter</a> ᛫ <a href="https://github.com/kiding">GitHub</a> ᛫ <a href="https://kiding.medium.com">Medium</a></p>
     </section>
 
