--- a/index.html
+++ b/index.html
@@ -165,6 +165,8 @@
       border: 0;
       padding: 0;
       margin: 0;
+
+      mix-blend-mode: normal;
     }
 
     /* #circle */
@@ -410,7 +412,7 @@
 
     <section class="info">
         <p>김동성 ᛫ Dongsung (Donny) Kim</p>
-        <p><a href="mailto:kiding@me.com">Mail</a> ᛫ <a href="https://twitter.com/kid1ng">Twitter</a> ᛫ <a href="https://github.com/kiding">GitHub</a> ᛫ <a href="https://kiding.medium.com">Medium</a></p>
+        <p><a href="mailto:kiding@me.com">Mail</a> ᛫ <a href="https://bsky.app/profile/kiding.bsky.social">Bluesky</a> ᛫ <a href="https://twitter.com/kid1ng">Twitter</a> ᛫ <a href="https://github.com/kiding">GitHub</a> ᛫ <a href="https://kiding.medium.com">Medium</a> ᛫ <a href="https://www.linkedin.com/in/kiding/">LinkedIn</a></p>
     </section>
 
     <section class="circle" id="circle-background"></section>
@@ -430,8 +432,9 @@
       <span>O</span>
     </section>
     <section class="circle info">
-      <a href="https://www.linkedin.com/in/kiding/">LinkedIn</a>
-      <a href="https://github.com/kiding/kiding.github.io/releases/tag/resume">Resume</a>
+      <p>🎗️</p>
+      <p>🏳️‍⚧️</p>
+      <p>🕯️</p>
     </section>
   </main>
 
