--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
       <p>2022 ᛫ <a href="https://youtu.be/bhthwXhGZDY">DEF CON 30</a> ᛫ The CSRF Resurrections! Starring the Unholy Trinity: Service Worker of PWA, SameSite of HTTP Cookie, and Fetch ᛫ CVE-2022-0117, CVE-2022-45410</p>
       <p>2020 ᛫ <a href="https://kiding.medium.com/macos-ocsp-telemetry-explainer-and-mitigation-9bc243928f4c">macOS OCSP “telemetry”—Explainer and Mitigation with Noise</a></p>
       <p>2018 ᛫ <a href="https://youtu.be/3IdgBwbOT-g">DEF CON 26</a> ᛫ Your Watch Can Watch You! Gear Up for the Broken Privilege Pitfalls in the Samsung Gear Smartwatch ᛫ CVE-2018-16262, CVE-2018-16263, CVE-2018-16264, CVE-2018-16265, CVE-2018-16266, CVE-2018-16267, CVE-2018-16268, CVE-2018-16269, CVE-2018-16270, CVE-2018-16271, CVE-2018-16272</p>
-      <p>2015 ᛫ <a href="https://support.apple.com/en-us/HT205033">Private Browsing History Leak in Apple Safari ᛫ </a>CVE-2015-3754</p>
+      <p>2015 ᛫ <a href="https://support.apple.com/en-us/HT205033">Private Browsing History Leak in Apple Safari</a> ᛫ CVE-2015-3754</p>
     </section>
 
     <section>
