--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
       text-wrap: nowrap;
     }
 
+    h1 {
+      font-stretch: extra-expanded;
+    }
+
+    p {
+      font-stretch: expanded;
+    }
+
     /* background */
 
     #background {
