--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
     }
 
     h1, p {
-      margin: 0;
       text-wrap: nowrap;
+      inline-size: fit-content;
+      margin: 0;
+      padding: 0 1em 0 0;
     }
 
     h1 {
