--- a/index.html
+++ b/index.html
@@ -38,10 +38,8 @@
     }
 
     h1, p {
-      text-wrap: nowrap;
-      inline-size: fit-content;
       margin: 0;
-      padding: 0 1em 0 0;
+      text-wrap: nowrap;
     }
 
     h1 {
@@ -326,37 +324,37 @@
     
     <section id="summary">
       <section>
-          <p>김동성 ᛫ Dongsung (Donny) Kim ᛫ 🎗️🏳️‍⚧️🕯️</p>
-          <p><a href="https://bsky.app/profile/kiding.bsky.social">Bluesky</a> ᛫ <a href="https://twitter.com/kid1ng">Twitter</a> ᛫ <a href="https://github.com/kiding">GitHub</a> ᛫ <a href="https://kiding.medium.com">Medium</a> ᛫ <a href="https://www.linkedin.com/in/kiding/">LinkedIn</a></p>
+          <p>김동성 ᛫ Dongsung (Donny) Kim ᛫ 🎗️🏳️‍⚧️🕯️ &nbsp;&nbsp;</p>
+          <p><a href="https://bsky.app/profile/kiding.bsky.social">Bluesky</a> ᛫ <a href="https://twitter.com/kid1ng">Twitter</a> ᛫ <a href="https://github.com/kiding">GitHub</a> ᛫ <a href="https://kiding.medium.com">Medium</a> ᛫ <a href="https://www.linkedin.com/in/kiding/">LinkedIn</a> &nbsp;&nbsp;</p>
       </section>
 
       <section>
         <h1>Work Experience</h1>
-        <p>2024 - Present ᛫ <a href="https://securityoffice.io">Security Office</a> ᛫ Cybersecurity Expert</p>
-        <p>2022 - 2024 ᛫ <a href="https://truesec.com">Truesec</a> / Säkerhetskontoret ᛫ IT-Security Expert</p>
-        <p>2021 - 2022 ᛫ <a href="https://zent.kr">Z Enterprise</a> ᛫ Software Engineer</p>
-        <p>2019 - 2020 ᛫ <a href="https://ridicorp.com">RIDI Corp</a> ᛫ Software Engineer / Security Advisor</p>
-        <p>2018 - 2019 ᛫ <a href="https://move.is">Move, Inc</a> ᛫ Software Engineer</p>
-        <p>2016 - 2018 ᛫ <a href="https://hit.skku.edu">H.I.T. (Hackers In inTrusion) Lab</a> ᛫ Student Researcher</p>
-        <p>2012 - 2014 ᛫ Shakr Media ᛫ Engineer</p>
-        <p>2012 - 2012 ᛫ <a href="https://ag.co.kr">Ahn-graphics, Ltd.</a> ᛫ Engineering Intern</p>
+        <p>2024 - Present ᛫ <a href="https://securityoffice.io">Security Office</a> ᛫ Cybersecurity Expert &nbsp;&nbsp;</p>
+        <p>2022 - 2024 ᛫ <a href="https://truesec.com">Truesec</a> / Säkerhetskontoret ᛫ IT-Security Expert &nbsp;&nbsp;</p>
+        <p>2021 - 2022 ᛫ <a href="https://zent.kr">Z Enterprise</a> ᛫ Software Engineer &nbsp;&nbsp;</p>
+        <p>2019 - 2020 ᛫ <a href="https://ridicorp.com">RIDI Corp</a> ᛫ Software Engineer / Security Advisor &nbsp;&nbsp;</p>
+        <p>2018 - 2019 ᛫ <a href="https://move.is">Move, Inc</a> ᛫ Software Engineer &nbsp;&nbsp;</p>
+        <p>2016 - 2018 ᛫ <a href="https://hit.skku.edu">H.I.T. (Hackers In inTrusion) Lab</a> ᛫ Student Researcher &nbsp;&nbsp;</p>
+        <p>2012 - 2014 ᛫ Shakr Media ᛫ Engineer &nbsp;&nbsp;</p>
+        <p>2012 - 2012 ᛫ <a href="https://ag.co.kr">Ahn-graphics, Ltd.</a> ᛫ Engineering Intern &nbsp;&nbsp;</p>
       </section>
 
       <section>
         <h1>Security Research</h1>
-        <p>2023 ᛫ <a href="https://youtu.be/98hacQ1zpgQ">DEF CON 31</a> ᛫ Your Clocks Have Ears! Timing-Based Browser-Based Local Network Port Scanner</p>
-        <p>2022 ᛫ <a href="https://youtu.be/bhthwXhGZDY">DEF CON 30</a> ᛫ The CSRF Resurrections! Starring the Unholy Trinity: Service Worker of PWA, SameSite of HTTP Cookie, and Fetch ᛫ CVE-2022-0117, CVE-2022-45410</p>
-        <p>2020 ᛫ <a href="https://kiding.medium.com/macos-ocsp-telemetry-explainer-and-mitigation-9bc243928f4c">macOS OCSP “telemetry”—Explainer and Mitigation with Noise</a></p>
-        <p>2018 ᛫ <a href="https://youtu.be/3IdgBwbOT-g">DEF CON 26</a> ᛫ Your Watch Can Watch You! Gear Up for the Broken Privilege Pitfalls in the Samsung Gear Smartwatch ᛫ CVE-2018-16262, CVE-2018-16263, CVE-2018-16264, CVE-2018-16265, CVE-2018-16266, CVE-2018-16267, CVE-2018-16268, CVE-2018-16269, CVE-2018-16270, CVE-2018-16271, CVE-2018-16272</p>
-        <p>2015 ᛫ <a href="https://support.apple.com/en-us/HT205033">Private Browsing History Leak in Apple Safari</a> ᛫ CVE-2015-3754</p>
+        <p>2023 ᛫ <a href="https://youtu.be/98hacQ1zpgQ">DEF CON 31</a> ᛫ Your Clocks Have Ears! Timing-Based Browser-Based Local Network Port Scanner &nbsp;&nbsp;</p>
+        <p>2022 ᛫ <a href="https://youtu.be/bhthwXhGZDY">DEF CON 30</a> ᛫ The CSRF Resurrections! Starring the Unholy Trinity: Service Worker of PWA, SameSite of HTTP Cookie, and Fetch ᛫ CVE-2022-0117, CVE-2022-45410 &nbsp;&nbsp;</p>
+        <p>2020 ᛫ <a href="https://kiding.medium.com/macos-ocsp-telemetry-explainer-and-mitigation-9bc243928f4c">macOS OCSP “telemetry”—Explainer and Mitigation with Noise</a> &nbsp;&nbsp;</p>
+        <p>2018 ᛫ <a href="https://youtu.be/3IdgBwbOT-g">DEF CON 26</a> ᛫ Your Watch Can Watch You! Gear Up for the Broken Privilege Pitfalls in the Samsung Gear Smartwatch ᛫ CVE-2018-16262, CVE-2018-16263, CVE-2018-16264, CVE-2018-16265, CVE-2018-16266, CVE-2018-16267, CVE-2018-16268, CVE-2018-16269, CVE-2018-16270, CVE-2018-16271, CVE-2018-16272 &nbsp;&nbsp;</p>
+        <p>2015 ᛫ <a href="https://support.apple.com/en-us/HT205033">Private Browsing History Leak in Apple Safari</a> ᛫ CVE-2015-3754 &nbsp;&nbsp;</p>
       </section>
 
       <section>
         <h1>Software Development</h1>
-        <p>2022 - Present ᛫ <a href="https://github.com/kiding/SokIM">Sok Input Method</a></p>
-        <p>2014 - 2015 ᛫ <a href="http://beotsmusic.kiding.net">BeotsMusic</a></p>
-        <p>2008 - 2013 ᛫ <a href="https://web.archive.org/web/20130217024529/http://www.appleforum.com/application/55873-국내-음악-가사를-찾아주는-가사수작을-소개합니다.html">Lyrichand</a></p>
-        <p>2008 - 2011 ᛫ <a href="https://web.archive.org/web/20140724184136/http://www.appleforum.com/application/54905-자막도-넣어주는-아이팟-인코더-팟벗.html">PodBuddy</a></p>
+        <p>2022 - Present ᛫ <a href="https://github.com/kiding/SokIM">Sok Input Method</a> &nbsp;&nbsp;</p>
+        <p>2014 - 2015 ᛫ <a href="http://beotsmusic.kiding.net">BeotsMusic</a> &nbsp;&nbsp;</p>
+        <p>2008 - 2013 ᛫ <a href="https://web.archive.org/web/20130217024529/http://www.appleforum.com/application/55873-국내-음악-가사를-찾아주는-가사수작을-소개합니다.html">Lyrichand</a> &nbsp;&nbsp;</p>
+        <p>2008 - 2011 ᛫ <a href="https://web.archive.org/web/20140724184136/http://www.appleforum.com/application/54905-자막도-넣어주는-아이팟-인코더-팟벗.html">PodBuddy</a> &nbsp;&nbsp;</p>
       </section>
     </section>
   </main>
