--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
 
       overflow-x: hidden;
       overflow-y: scroll;
+
+      opacity: 0.9;
     }
 
     /* cover */
@@ -118,9 +120,7 @@
 
       display: flex;
       flex-direction: column;
-      justify-content: flex-end;
-
-      mix-blend-mode: difference;
+      justify-content: center;
     }
 
     /* hero */
@@ -219,7 +219,6 @@
       padding-left: 0.5em;
       border-left: 0.3em solid #fff;
 
-      mix-blend-mode: difference;
       overflow-x: scroll;
     }
 
